k8s/pipeline/report2chart-deployment.yaml
apiVersion: extensions/v1beta1 
kind: Deployment
metadata:
  name: report2chart
spec:
  replicas: 1
  template:
    metadata:
      labels:
        pipeline.sugarcrm.io/app: report2chart
        pipeline.sugarcrm.io/commit: %%COMMIT%%
    spec:
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 1
      containers:
      - name: phantomjs 
        image: %%IMAGE_PHANTOMJS%% 
        imagePullPolicy: IfNotPresent
      - name: nginx
        image: %%IMAGE_NGINX%%
        imagePullPolicy: IfNotPresent 
        ports:
        - name: http 
          containerPort: 80
          protocol: TCP
