k8s/pipeline/report2chart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: report2chart
  labels:
    pipeline.sugarcrm.io/app: report2chart
    pipeline.sugarcrm.io/commit: %%COMMIT%%
spec:
  ports:
  - name: http 
    port: 80 
    protocol: TCP
  selector:
    pipeline.sugarcrm.io/app: report2chart
    pipeline.sugarcrm.io/commit: %%COMMIT%%
