k8s/pipeline/report2chart-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: report2chart
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: report2chart.tooling.sugarcrm.io
    http:
      paths:
      - path: /
        backend:
          serviceName: report2chart
          servicePort: 80
